--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,4 +11,6 @@
 
 <ion-content>
   Verificando conexion de internet: {{ conexionInternet }}
+  <br/>
+  Verificando conexion de internet: {{ algo }}
 </ion-content>
