--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,11 @@
 </ion-header>
 
 <ion-content>
-  Verificando conexion de internet: {{ conexionInternet }}
-  <br/>
-  Verificando conexion de internet: {{ algo }}
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        Verificando conexion de internet: <ion-text [color]="conexionInternet === true ? 'success' : 'danger'">{{ conexionInternet }}</ion-text>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
